--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: ./update-gh-pages
+        run: sudo ./update-gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.github_token }}
           DEPLOY_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
